<resources>
    <string name="app_name">E-commerce_Store_Fancy_Pants</string>

    //Log In and Register
    <string name="msg_Email">Correo</string>
    <string name="msg_Password">Contraseña</string>
    <string name="bt_Login">Ingresar</string>
    <string name="bt_Register">Registarse</string>
    
    //Create and Update
    <string name="msg_Nombre">Nombre del producto</string>
    <string name="msg_Precio">Precio del producto</string>
    <string name="msg_Cantidad">Cantidad</string>
    <string name="msg_Color">Color</string>
    <string name="mag_Descuento">Descuento</string>
    <string name="btAgregar">Agregar Producto</string>
    <string name="btActualizar">Actualizar Producto</string>

    //Delete
    <string name="Si">Si</string>
    <string name="No">No</string>
    <string name="Delete">Eliminar</string>
    <string name="msg_Delete">Seguro que desea eliminar el producto: </string>
    <string name="menu_delete">Borrar</string>

    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_producto">Producto</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>